Update resources.